--- a/quiz.css
+++ b/quiz.css
@@ -75,3 +75,10 @@ body{
 .incorrect{
     background: #ff9393;
 }
+.quiz h3 {
+    text-align: right;
+    font-size: 16px;
+    color: black;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
